--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RPG Anime Free For All</title>
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Gugi" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Top Message Bar and choose Characters -->
     <header>
         <div id="message-board" class="header-div disappear">
-            <h1>Anime Battle Royal</h1>
+            <h1>Welcome to Unit-4-Game</h1>
         </div>
 
         <div id="chara-select" class="header-div">
-            <img src="assets/images/mini/aa_cardcaptor1.png" alt="1" class="player">
-            <img src="assets/images/mini/aa_digimon.png" alt="2" class="player">
-            <img src="assets/images/mini/aa_future-diary.png" alt="3" class="player">
-            <img src="assets/images/mini/aa_magi1.png" alt="4" class="player">
+            <!-- <div class="chara-slot" id="chara-1"></div> -->
+
+            <!-- Chara created from JS -->
+            <!-- div .chara-slot #chara-i -->
+            <!-- img -->
+            <!-- p (for name) -->
+            <!-- p (for health) -->
         </div>
     </header>
     
@@ -30,14 +34,20 @@
     <div class="container">
         <section>
             <div id="left-field" class="field-div clear">
-                <div id="player-chara" class="chara">
-                    <img src="assets/images/mini/aa_naruto2.png" id="player-img" class="in-play">
+                <div id="player-chara" class="chara disappear">
+                    <img src="" id="player-img">
+                    <p class="name"></p>
+                    <p class="health">Health: <span id="player-health"></span></p>
+                    <p class="attack">Attack: <span id="player-attack"></span></p>
                 </div>
             </div>
 
             <div id="right-field" class="field-div clear">
-                <div id="comp-chara" class="chara">
-                    <img src="assets/images/mini/aa_pokemon2.png" id="comp-img" class="in-play">
+                <div id="comp-chara" class="chara disappear">
+                    <img src="" id="comp-img">
+                    <p class="name"></p>
+                    <p class="health">Health: <span id="comp-health"></span></p>
+                    <p class="attack">Attack: <span id="comp-attack"></span></p>
                 </div>
             </div>
         </section>
@@ -47,18 +57,36 @@
 
 
 
-    <!-- Buttons -->
+    <!-- Buttons and Info center-->
     <footer>
+        <div class="setting bottom">
+            <h3 id="win">Win: <span class="win-score">0</span></h3>
+            <h3 id="lose">Lose: <span class="lose-score">0</span></h3>
+        </div>
         <div class="wrapper">
-            <div class="container-footer">
-              <a href="#" title="Button push purple" class="button btnPush btnPurple">Attack</a>
-              <a href="#" title="Button push lightblue" class="button btnPush btnLightBlue">Defend</a>
-              <a href="#" title="Button push blue/green" class="button btnPush btnBlueGreen clear">Heal (<span id="heal-num">0</span>)</a>
+                <div class="container-footer start-btn">
+                        <a href="#" title="Button" class="button start">Start</a>
+                      </div>
+            <div class="container-footer atk-btn disappear">
+              <a href="#" title="Button" class="button atk">Attack</a>
             </div>
+            <div class="container-footer reset-btn disappear">
+                <a href="#" title="Button" class="button reset">Reset</a>
+            </div>
+        </div>
+        <div class="info-center bottom">
+            <p>Your attach lowered Enemy health to 500</p>
+            <p>Enemy attach lowered Your health to 500</p>
+        </div>
+        
     </footer>
     <!-- JQuery Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- My JS -->
     <script src="assets/javascript/game.js"></script>
+
+    <script>
+
+    </script>
 </body>
 </html>
