fixed the once play issue

--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
 <body>
     <!-- Top Message Bar and choose Characters -->
     <header>
-        <div id="message-board" class="header-div disappear">
+        <div id="message-board" class="header-div ">
             <h1>Welcome to Unit-4-Game</h1>
         </div>
 
-        <div id="chara-select" class="header-div">
-            <!-- <div class="chara-slot" id="chara-1"></div> -->
-
-            <!-- Chara created from JS -->
-            <!-- div .chara-slot #chara-i -->
-            <!-- img -->
-            <!-- p (for name) -->
-            <!-- p (for health) -->
+        <div id="chara-select" class="header-div disappear">
+            <div class="chara-slot disappear" id="chara-0" value= "0"></div>
+            <div class="chara-slot disappear" id="chara-1" value= "1"></div>
+            <div class="chara-slot disappear" id="chara-2" value= "2"></div>
+            <div class="chara-slot disappear" id="chara-3" value= "3"></div>
         </div>
     </header>
     
