--- a/index.html
+++ b/index.html
@@ -79,12 +79,11 @@
 
         <!-- Green sides with the buttons -->
         <div class="inner-right">
-            <h3>GAMEGIRL 
-                <span id="red">C</span>
-                <span id="purple">O</span>
-                <span id="green">L</span>
-                <span id="yellow">O</span>
-                <span id="blue">R</span>
+            <h3><span class="gamegirl">GAMEGIRL</span> <span class="colors" id="red">C</span>
+                <span class="colors" id="purple">O</span>
+                <span class="colors" id="green">L</span>
+                <span class="colors" id="yellow">O</span>
+                <span class="colors" id="blue">R</span>
             </h3>
             <div class="wrapper">
                 <div class="container-footer atk-btn">
