fixed css and some js bugs

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     <div class="info-center"></div>
                 </div>
 
-                <div class="win-page disappear"><h3>Congradulation!</h3></div>
-                <div class="lose-page disappear"><h3>You Lose!</h3></div>
+                <div class="win-page disappear"><h3>YOU WIN!</h3></div>
+                <div class="lose-page disappear"><h3>You Lose...</h3></div>
             </div>
         </div>
 
@@ -96,7 +96,7 @@
                 <button id="reset">RESET</button>
             </div>
             <img src="assets/images/pikachu.png" alt="pikachu" id="pikaimg">
-            <button id="sound">Play / Stop</button>
+            <button id="sound">Music</button>
         </div>
         <audio id="bg-audio" loop>
             <source src="assets/audio/lugias_song.mp3" type="audio/mpeg">
