made mobile responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="click-start">
-                <h3>Click Start Button --></h3>
+                <h3>Click Start Button</h3>
             </div>
 
             <div class="score clear disappear">
@@ -71,8 +71,6 @@
                     <div class="info-center"></div>
                 </div>
 
-                <div class="win-page disappear"><h3>YOU WIN!</h3></div>
-                <div class="lose-page disappear"><h3>You Lose...</h3></div>
             </div>
         </div>
 
@@ -96,7 +94,9 @@
                 <button id="reset">RESET</button>
             </div>
             <img src="assets/images/pikachu.png" alt="pikachu" id="pikaimg">
-            <button id="sound">Music</button>
+            <div id="music-div">
+                <button id="sound">Music</button>
+            </div>
         </div>
         <audio id="bg-audio" loop>
             <source src="assets/audio/lugias_song.mp3" type="audio/mpeg">
