--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="assets/javascript/game.js"></script>
+    <script type="text/javascript" src="assets/javascript/badmove.js"></script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
